# rift

./: CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE  README.md  test_timeout_resolution.rs
crates/rift-core/: Cargo.toml
crates/rift-core/benches/: imposter_matcher_bench.rs
crates/rift-core/src/: lib.rs  util.rs
crates/rift-core/src/backends/: inmemory.rs  redis.rs
crates/rift-core/src/behaviors/: copy.rs  cycler.rs  lookup.rs  mod.rs  request.rs  transform.rs  types.rs  wait.rs
crates/rift-core/src/config/: mod.rs  protocol.rs  routing.rs  scripting.rs  upstream.rs
crates/rift-core/src/extensions/: fault.rs  flow_state.rs  matcher.rs  metrics.rs  mod.rs  routing.rs  stub_analysis.rs  template.rs  template_fn.rs
crates/rift-core/src/imposter/: core.rs  handler.rs  journal.rs  manager.rs  mod.rs  predicates.rs  reconcile.rs  response.rs  script_resolve.rs  tests.rs  types.rs
crates/rift-core/src/imposter/core/: lifecycle.rs  matching.rs  mod.rs  proxy.rs  recording.rs  stub_index.rs  verify.rs
crates/rift-core/src/imposter/predicates/: fields.rs  json.rs  mod.rs
crates/rift-core/src/predicate/: body_matcher.rs  deep_equals.rs  field_matcher.rs  logical.rs  matcher.rs  mod.rs  options.rs  path_matcher.rs  request.rs
crates/rift-core/src/proxy/: client.rs  context.rs  forwarding.rs  handler.rs  headers.rs  intercept_ca.rs  mod.rs  network.rs  response_ext.rs  server.rs  tls.rs  truststore.rs
crates/rift-core/src/recording/: mod.rs  mode.rs  stub_generator.rs  types.rs
crates/rift-core/src/response/: builder.rs  mod.rs
crates/rift-core/src/scripting/: bounded.rs  compiled_cache.rs  decision_cache.rs  entrypoint_check.rs  js_engine.rs  js_validator.rs  lua_engine.rs  lua_validator.rs  mod.rs  rhai_engine.rs  rhai_validator.rs  script_pool.rs  stub_validator.rs  trace.rs  validator.rs
crates/rift-core/tests/: embedded_lifecycle.rs  handler_error_responses.rs
crates/rift-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/rift-ffi/include/: rift_ffi.h
crates/rift-ffi/src/: lib.rs
crates/rift-ffi/tests/: round_trip.rs
crates/rift-http-proxy/: Cargo.toml  Dockerfile  Dockerfile.prebuilt  Dockerfile.static  build.rs
crates/rift-http-proxy/src/: bootstrap.rs  config_loader.rs  gateway.rs  healthcheck.rs  injection_gate.rs  intercept.rs  intercept_control.rs  intercept_rules.rs  lib.rs  main.rs  runtime.rs  script_cli.rs  server.rs
crates/rift-http-proxy/src/admin_api/: mod.rs  request_filter.rs  router.rs  server.rs  types.rs
crates/rift-http-proxy/src/admin_api/handlers/: events.rs  imposters.rs  (+5 more)
crates/rift-http-proxy/src/behaviors/: extraction.rs  mod.rs  types.rs
crates/rift-http-proxy/src/front_door/: listener.rs  mod.rs  route_table.rs
crates/rift-http-proxy/src/imposter/: core.rs  handler.rs  manager.rs  predicates.rs  tests.rs  types.rs
crates/rift-http-proxy/src/scripting/: js_engine.rs  mod.rs  script_pool.rs
crates/rift-http-proxy/tests/: admin_api_integration.rs  admin_sse.rs  backend_decorate.rs  bootstrap_seam.rs  corpus_replay.rs  embedded_server.rs  front_door.rs  intercept_cli.rs  intercept_config_cdn_example.rs  intercept_configfile.rs  intercept_rules_injection_gate.rs  intercept_runtime_lifecycle.rs  issue_269_static_wiring.rs  issue_295_http2.rs  issue_323_behavior_failure_headers.rs  issue_356_scripts_dir.rs  issue_356_yaml_file_scripts.rs  issue_357_script_reset.rs  issue_359_response_templating.rs  issue_359_response_templating_debug.rs  issue_360_debug_script_trace.rs  issue_360_debug_script_trace_off.rs  issue_360_script_cli.rs  issue_375_strict_behaviors.rs  issue_376_lenient_default.rs  issue_376_strict_flow_store.rs  issue_440_predicate_inject_error_parity.rs  issue_612_configfile_injection_gate.rs  issue_797_error_envelope_type.rs  redis_backend.rs  script_timeout.rs  top_level_fault.rs  verify_dynamic.rs
crates/rift-http-proxy/tests/fixtures/: fail-twice.rhai  get-resource.json
crates/rift-lint/: Cargo.toml  Dockerfile  Dockerfile.prebuilt  README.md
crates/rift-lint/src/: lib.rs  main.rs  types.rs  validator.rs
crates/rift-lint/tests/: validator_tests.rs
crates/rift-mock-core/: Cargo.toml
crates/rift-mock-core/benches/: decision_cache_bench.rs  imposter_matcher_bench.rs  proxy_rules_bench.rs
crates/rift-mock-core/src/: lib.rs  util.rs
crates/rift-mock-core/src/backends/: inmemory.rs  mod.rs  redis.rs
crates/rift-mock-core/src/behaviors/: copy.rs  cycler.rs  extraction.rs  lookup.rs  mod.rs  request.rs  sequencer.rs  wait.rs
crates/rift-mock-core/src/config/: listen.rs  mod.rs  protocol.rs  recording.rs  rules.rs  scripting.rs  upstream.rs
crates/rift-mock-core/src/extensions/: decorate.rs  fault.rs  flow_state.rs  matcher.rs  metrics.rs  mod.rs  no_match.rs  routing.rs  rule_index.rs  stub_analysis.rs  template.rs  template_fn.rs
crates/rift-mock-core/src/imposter/: events.rs  fault_io.rs  handler.rs  journal.rs  manager.rs  mod.rs  reconcile.rs  response.rs  script_resolve.rs  tests.rs  types.rs
crates/rift-mock-core/src/predicate/: body_matcher.rs  deep_equals.rs  field_matcher.rs  mod.rs  request.rs  string_matcher.rs
crates/rift-mock-core/src/proxy/: client.rs  forwarding.rs  handler.rs  headers.rs  intercept_ca.rs  mod.rs  network.rs  response_ext.rs  server.rs  tests.rs  tls.rs  truststore.rs
crates/rift-mock-core/src/recording/: mod.rs  proxy_store.rs  store.rs  stub_generator.rs
crates/rift-mock-core/src/response/: builder.rs  mod.rs
crates/rift-mock-core/src/scripting/: bounded.rs  compiled_cache.rs  decision_cache.rs  js_engine.rs  js_validator.rs  mod.rs  rhai_engine.rs  rhai_validator.rs  script_pool.rs  stub_validator.rs  trace.rs  validator.rs
crates/rift-mock-core/tests/: embedded_lifecycle.rs  handler_error_responses.rs  issue_636_binary_request_bodies.rs  shipped_examples_behave.rs  shipped_examples_load.rs
crates/rift-tui/: Cargo.toml  README.md
crates/rift-tui/src/: api.rs  validation.rs
crates/rift-tui/src/app/: events.rs  mod.rs
crates/rift-tui/src/ui/: dialogs.rs  help.rs  imposter_detail.rs  imposters.rs  mod.rs
crates/rift-types/: Cargo.toml
(+103 files in other folders)
