[workspace]
resolver = "2"
members = [
    "crates/rift-types",
    "crates/rift-core",
    "crates/rift-ffi",
    "crates/rift-http-proxy",
    "crates/rift-lint",
    "crates/rift-tui",
]
exclude = [
    "examples/apps/*",
    "benchmarks/*",
    "tests/compatibility",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Rift Contributors"]
repository = "https://github.com/EtaCassiopeia/rift"
homepage = "https://github.com/EtaCassiopeia/rift"
rust-version = "1.92"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Scripting
rhai = { version = "1.16", features = ["sync", "serde", "no_optimize"] }

# Faker
fake = { version = "2.9", features = ["derive", "uuid", "http", "chrono"] }

# CLI
clap = { version = "4.4", features = ["derive", "cargo", "env"] }
clap_complete = "4.4"

# HTTP/gRPC
reqwest = { version = "0.11", features = ["json"] }
tonic = "0.11"
tonic-build = "0.11"
prost = "0.12"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Misc utilities
once_cell = "1.19"
futures = "0.3"
bytes = "1.5"
uuid = { version = "1.6", features = ["v4", "serde"] }
rand = "0.8"

# Testing
proptest = "1.4"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
debug = false
incremental = false  # For reproducible benchmarks

[profile.dev]
opt-level = 0
debug = true
