[workspace]
resolver = "2"
members = [
    "crates/rift-types",
    "crates/rift-mock-core",
    "crates/rift-ffi",
    "crates/rift-http-proxy",
    "crates/rift-lint",
    "crates/rift-tui",
]
exclude = [
    "examples/apps/*",
    "benchmarks/*",
    "tests/compatibility",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Rift Contributors"]
repository = "https://github.com/EtaCassiopeia/rift"
homepage = "https://github.com/EtaCassiopeia/rift"
rust-version = "1.92"

# Centralized lint policy inherited by every crate via `[lints] workspace = true`.
# Kept intentionally conservative: CI runs `clippy -- -D warnings`, which promotes any
# `warn` to a hard error, so stricter lints (e.g. clippy::unwrap_used / expect_used) are
# deliberately left out here — enabling them would fail the build on ~650 pre-existing
# sites. This table centralizes the existing policy and makes new crates inherit it.
[workspace.lints.clippy]
all = "warn"
# Targeted idiom lints (not full pedantic): keep new code on modern idioms.
uninlined_format_args = "warn"
manual_let_else = "warn"
unnecessary_map_or = "warn"

[workspace.dependencies]
# Async runtime — version pinned here; each crate selects its own tokio features
tokio = { version = "1.41" }
tokio-util = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Scripting — pinned to =1.21.0 to match rift-mock-core's deliberate exact pin
rhai = { version = "=1.21.0", features = ["sync", "serde"] }

# Faker
fake = { version = "2.9", features = ["derive", "uuid", "http", "chrono"] }

# CLI — base features; crates add `env` where needed
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"

# HTTP client — rustls everywhere (the project pins the ring crypto provider)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Misc utilities
futures = "0.3"
bytes = "1.7"
uuid = { version = "1.8", features = ["v4", "serde"] }
rand = "0.8"

# Testing
proptest = "1.4"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
debug = false
incremental = false  # For reproducible benchmarks

[profile.dev]
opt-level = 0
debug = true
