[package]
name = "rift-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

description = "Rift C-ABI: a tiny opaque-handle + JSON in/out FFI over the rift-core engine, for embedding Rift in-process (e.g. via the JVM Panama FFM backend)."
readme = "../../README.md"

[lib]
# cdylib: the C-ABI shared library the JVM downcalls into.
# rlib: so the in-crate Rust integration test can link and exercise the same extern fns.
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
# Features are forwarded (not hard-coded) so the per-platform cdylib build can drop engines that
# can't cross-compile for a given target (e.g. LuaJIT for x86_64-apple-darwin) — issue #205.
rift-core = { path = "../rift-core", default-features = false }
# The admin control plane (issue #343): rift_serve_admin spawns the real AdminApiServer over the
# handle's manager. default-features=false so `mimalloc` is NOT pulled — a cdylib must never
# impose a global allocator on its host.
rift-http-proxy = { path = "../rift-http-proxy", default-features = false }
tokio = { workspace = true, features = ["rt-multi-thread"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
# Emit a diagnostic before collapsing a typed error into a C sentinel; the embedding host
# installs the subscriber (no-op if none is set).
tracing.workspace = true

[dev-dependencies]
reqwest.workspace = true

[features]
default = ["redis-backend", "lua", "javascript"]
# Engine features are forwarded to BOTH rift-core and rift-http-proxy so the two share one
# feature set (mimalloc is deliberately never forwarded — see the dependency note above).
redis-backend = ["rift-core/redis-backend", "rift-http-proxy/redis-backend"]
lua = ["rift-core/lua", "rift-http-proxy/lua"]
javascript = ["rift-core/javascript", "rift-http-proxy/javascript"]
