[package]
name = "rift-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

description = "Rift C-ABI: a tiny opaque-handle + JSON in/out FFI over the rift-mock-core engine, for embedding Rift in-process (e.g. via the JVM Panama FFM backend)."
readme = "../../README.md"

[lib]
# cdylib: the C-ABI shared library the JVM downcalls into.
# rlib: so the in-crate Rust integration test can link and exercise the same extern fns.
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
# Features are forwarded (not hard-coded) so the per-platform cdylib build can drop optional
# features that can't cross-compile for a given target — issue #205.
rift-mock-core = { path = "../rift-mock-core", default-features = false }
# The admin control plane (issue #343): rift_serve_admin spawns the real AdminApiServer over the
# handle's manager. default-features=false so `mimalloc` is NOT pulled — a cdylib must never
# impose a global allocator on its host.
rift-http-proxy = { path = "../rift-http-proxy", default-features = false }
tokio = { workspace = true, features = ["rt-multi-thread"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
# Emit a diagnostic before collapsing a typed error into a C sentinel; the embedding host
# installs the subscriber (no-op if none is set).
tracing.workspace = true
# Non-poisoning handle mutexes (issue #484): a panic inside a downcall must not wedge the handle
# by poisoning its admin/intercept locks.
parking_lot = "0.12"

[dev-dependencies]
reqwest.workspace = true
# Mint a committed CA (cert+key PEM) on disk in the intercept CA-reuse gate test (issue #429).
rcgen = "0.13"
# Write imposter config files on disk for the `configFile` allowInjection gate tests (issue #616).
tempfile = "3.8"

[features]
default = ["redis-backend", "javascript"]
# Engine features are forwarded to BOTH rift-mock-core and rift-http-proxy so the two share one
# feature set (mimalloc is deliberately never forwarded — see the dependency note above).
redis-backend = ["rift-mock-core/redis-backend", "rift-http-proxy/redis-backend"]
javascript = ["rift-mock-core/javascript", "rift-http-proxy/javascript"]
