[package]
name = "rift-http-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

# Crate metadata
description = "Rift: high-performance HTTP chaos engineering proxy with Lua/Rhai/JavaScript scripting for fault injection."
readme = "../../README.md"
keywords = ["proxy", "http", "chaos", "fault-injection", "kubernetes"]
categories = ["network-programming", "web-programming::http-server", "development-tools::testing"]

[lints]
workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["full"] }
# CancellationToken + TaskTracker for graceful, bindable server shutdown (issue #342)
tokio-util = { workspace = true, features = ["rt"] }
futures.workspace = true

# HTTP
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
# `channel` (issue #461 SSE body) pulls only tokio, already a dependency — no new crate in the tree.
http-body-util = { version = "0.1", features = ["channel"] }
tower = { version = "0.5", features = ["full"] }
# Pin the rustls crypto provider to `ring` everywhere. hyper-rustls/tokio-rustls
# default to the `aws-lc-rs` provider, whose C build (aws-lc-sys) fails to compile
# on the windows-msvc CI runner (C11 atomics). The runtime provider is ring
# (see main.rs), so aws-lc-rs is dead weight; disabling it keeps the build portable.
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "ring", "native-tokio", "tls12", "logging"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-pemfile = "2.0"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }

# Serialization
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true

# Shared workspace types + CLI-free engine (issue #203)
rift-types = { path = "../rift-types", version = "0.1.0" }
rift-mock-core = { path = "../rift-mock-core", version = "0.1.0", default-features = false }

# Stable stub id generation for id-addressed stub ops (issue #202)
uuid.workspace = true

# Logging & Observability
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender = "0.2"
prometheus = "0.13"
lazy_static = "1.4"

# CLI
clap = { workspace = true, features = ["env"] }

# HTTP client (for save command)
reqwest.workspace = true

# Utils
bytes.workspace = true
base64 = "0.22"
# Constant-time comparison for the admin API key (issue #548 — timing side channel)
subtle = "2"
chrono.workspace = true
regex = "1.11"
rand.workspace = true
urlencoding = "2.1"
similar = "2.6"
anyhow.workspace = true
thiserror.workspace = true
socket2 = "0.5"
num_cpus = "1.16"
libc = "0.2"
parking_lot = "0.12"
crossbeam = "0.8"
# Per-core worker pinning (RFC-712 D4, issue #744); opt-in via --runtime-affinity.
core_affinity = "0.8"

# Optional high-throughput global allocator for the server binary (issue #293).
# Feature-gated (default-on) so FFI/cdylib and cross-compile builds can drop it;
# it is wired only into the `rift-http-proxy` binary, never rift-mock-core/rift-ffi.
mimalloc = { version = "0.1", optional = true }
# Allocator bake-off candidate (issue #717): opt-in alternative to mimalloc for A/B
# throughput/RSS comparison; never both wired as the active allocator (see [features]).
tikv-jemallocator = { version = "0.6", optional = true }

# XML/XPath support for Mountebank compatibility
sxd-document = "0.3"
sxd-xpath = "0.4"

# JSONPath RFC 9535 support
serde_json_path = "0.7"

[dev-dependencies]
# Turn on the failing flow-store backend for backend-outage tests (issue #318)
rift-mock-core = { path = "../rift-mock-core", version = "0.1.0", default-features = false, features = ["test-backend"] }
# Corpus lint gate (issue #460): lint every vendored fixture via the library API.
rift-lint = { path = "../rift-lint", version = "0.1.0" }
tempfile = "3.8"
rcgen = "0.13"

# Integration testing
reqwest = { workspace = true, features = ["http2"] }
tokio-test = "0.4"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["redis"] }
assert-json-diff = "2.0"
serial_test = "3.0"
tracing-test = "0.2"
port_check = "0.2"

[features]
default = ["redis-backend", "javascript", "mimalloc", "quamina-matching"]
redis-backend = ["rift-mock-core/redis-backend"]
javascript = ["rift-mock-core/javascript"]
# The quamina body-field candidate dimension (#767). rift-mock-core is taken with
# `default-features = false`, so a feature that is default-on THERE reaches nothing users run
# unless it is forwarded here — which is exactly how #777 shipped the dimension into the library
# and out of the binary. `scripts/verify-feature-propagation.sh` now gates that invariant.
quamina-matching = ["rift-mock-core/quamina-matching"]
# High-throughput global allocator for the server binary; drop it (e.g.
# `--no-default-features`) for FFI/cross-compile builds that must not link it.
mimalloc = ["dep:mimalloc"]
# Opt-in bake-off allocator (#717): when both `mimalloc` and `jemalloc` are enabled
# (e.g. CI's --all-features lanes) mimalloc wins by cfg precedence in main.rs — deliberately
# NOT a compile_error! because CI builds --all-features.
jemalloc = ["dep:tikv-jemallocator"]

[[bin]]
name = "rift-verify"
path = "src/bin/verify.rs"
