[package]
name = "rift-lint"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

description = "Configuration linter library and CLI for Rift HTTP Proxy"
readme = "README.md"
keywords = ["lint", "validation", "http", "mock", "mountebank"]
categories = ["development-tools::testing", "command-line-utilities"]

[lints]
workspace = true

[dependencies]
# Serialization
serde.workspace = true
serde_json.workspace = true

# Regex for pattern validation
regex = "1"

# Structured error types
thiserror.workspace = true

# CLI argument parsing (only needed for binary)
clap = { workspace = true, optional = true }

# JavaScript validation (optional) — aligned with rift-core's boa_engine pin
boa_engine = { version = "0.20", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = ["cli"]
cli = ["dep:clap"]
javascript = ["dep:boa_engine"]

[[bin]]
name = "rift-lint"
path = "src/main.rs"
required-features = ["cli"]

[lib]
name = "rift_lint"
path = "src/lib.rs"
