[package]
name = "rift-mock-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

description = "Rift core engine: imposter lifecycle, matching, behaviors, scripting and flow-state — usable in-process without the CLI or admin server."
readme = "../../README.md"

[lints]
workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["full"] }
futures.workspace = true

# HTTP
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tower = { version = "0.5", features = ["full"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "ring", "native-tokio", "tls12", "logging"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-pemfile = "2.0"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
# x509-parser: needed to recover a loaded CA's distinguished name (CertificateParams::from_ca_cert_pem)
rcgen = { version = "0.13", features = ["x509-parser"] }

# Serialization
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true

# Shared workspace types
rift-types = { path = "../rift-types", version = "0.1.0" }

# Scripting engines
rhai.workspace = true
boa_engine = { version = "0.20", optional = true }

# State storage
redis = { version = "0.26", default-features = false, optional = true }
r2d2 = { version = "0.8", optional = true }

# Logging & Observability
tracing.workspace = true
prometheus = "0.13"
lazy_static = "1.4"

# HTTP client (proxy forwarding)
reqwest.workspace = true

# Utils
bytes.workspace = true
base64 = "0.22"
chrono.workspace = true
regex = "1.11"
rand.workspace = true
urlencoding = "2.1"
similar = "2.6"
matchit = "0.9"
aho-corasick = "1.1"
anyhow.workspace = true
thiserror.workspace = true
socket2 = "0.5"
num_cpus = "1.16"
libc = "0.2"
parking_lot = "0.12"
arc-swap = "1.7"
crossbeam = "0.8"
# Response templating `{{uuid}}` (issue #359); already a workspace dep (previously dev-only here).
uuid.workspace = true

# XML/XPath support
sxd-document = "0.3"
sxd-xpath = "0.4"

# JSONPath RFC 9535 support
serde_json_path = "0.7"
p12 = "0.6.3"
yasna = "0.5"
ring = "0.17"

[dev-dependencies]
tempfile = "3.8"
reqwest.workspace = true
tokio-test = "0.4"
serial_test = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "imposter_matcher_bench"
harness = false

[features]
default = ["redis-backend", "javascript"]
redis-backend = ["redis", "r2d2"]
javascript = ["boa_engine"]
# Deliberately failing flow-store backend for backend-outage tests (issue #318)
test-backend = []
