[package]
name = "rift-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

# Crate metadata
description = "Interactive Terminal User Interface for Rift HTTP Proxy"
readme = "README.md"
keywords = ["tui", "terminal", "http", "mock", "proxy"]
categories = ["command-line-interface", "development-tools::testing"]

[lints]
workspace = true

[dependencies]
# TUI framework
ratatui = { version = "0.30.2", default-features = false, features = ["crossterm"] }
ratatui-textarea = { version = "0.9", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }

# UI widgets
tui-popup = "0.7"
# Clipboard support
arboard = "3.4"

# Directory paths
dirs = "5.0"

# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }

# HTTP client for Admin API
reqwest.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# CLI argument parsing
clap = { workspace = true, features = ["env"] }

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Validation
rift-lint = { path = "../rift-lint", default-features = false }

[[bin]]
name = "rift-tui"
path = "src/main.rs"

[lib]
name = "rift_tui"
path = "src/lib.rs"
