[package]
name = "rift-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared core types for the Rift workspace (imposters, stubs, predicates)."

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
